force-app/main/default/objects/Campaign/fields/CampaignMembers__c.field-meta.xml
<CustomField>
    <fullName>CampaignMembers__c</fullName>
    <formula>NumberOfLeads +  NumberOfContacts -  NumberOfConvertedLeads</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>