force-app/main/default/objects/Campaign/fields/CaseSafeId__c.field-meta.xml
<CustomField>
    <fullName>CaseSafeId__c</fullName>
    <description>Formula to display the 18 character SF record Id</description>
    <formula>CASESAFEID( Id )</formula>
    <label>CaseSafeId</label>
    <type>Text</type>
</CustomField>