force-app/main/default/objects/Campaign/fields/LivestormId__c.field-meta.xml
<CustomField>
    <fullName>LivestormId__c</fullName>
    <inlineHelpText>The Webinar Event Id from Livestorm</inlineHelpText>
    <label>LivestormId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>