force-app/main/default/objects/Campaign/fields/OldId__c.field-meta.xml
<CustomField>
    <fullName>OldId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Old Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>