force-app/main/default/objects/Campaign/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <label>Product group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductGroups</valueSetName>
    </valueSet>
</CustomField>