force-app/main/default/objects/Campaign/fields/Reached__c.field-meta.xml
<CustomField>
    <fullName>Reached__c</fullName>
    <label>Reached</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>notEqual</operation>
        <value>Niet bereikt</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>