force-app/main/default/objects/Campaign/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <defaultValue>IF(ISPICKVAL($User.OperatingCompany__c, &apos;Noordhoff Zorg&apos;), &apos;Zorg&apos;, &apos;&apos;)</defaultValue>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segment</valueSetName>
    </valueSet>
</CustomField>