force-app/main/default/objects/Campaign/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <inlineHelpText>Number of samples sent or appointments made for Sales</inlineHelpText>
    <label>Success</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Afspraak Studiemeister, Bereikt en BOP, bereikt terugbel afspraak, Bex verstuurd, Bex verstuurd met Afspraak, Bex verstuurd met Afspraak Studiemeister, BOP reeds verwerkt, Terugbelafspraak</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>