force-app/main/default/objects/Campaign/fields/Webinar_OnDemandURL__c.field-meta.xml
<CustomField>
    <fullName>Webinar_OnDemandURL__c</fullName>
    <description>Contains the on-demand link which can be used to view the event after it has taken place</description>
    <label>Webinar On-demand URL</label>
    <type>Url</type>
</CustomField>