force-app/main/default/objects/Campaign/fields/WebinarAutomation__c.field-meta.xml
<CustomField>
    <fullName>WebinarAutomation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WebinarAutomation</label>
    <type>Checkbox</type>
</CustomField>