force-app/main/default/objects/Campaign/fields/WebinarEndTime__c.field-meta.xml
<CustomField>
    <fullName>WebinarEndTime__c</fullName>
    <label>Webinar End Time</label>
    <type>DateTime</type>
</CustomField>