force-app/main/default/objects/Campaign/fields/WebinarName__c.field-meta.xml
<CustomField>
    <fullName>WebinarName__c</fullName>
    <label>Webinar Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>