force-app/main/default/objects/Campaign/fields/WebinarSpeaker__c.field-meta.xml
<CustomField>
    <fullName>WebinarSpeaker__c</fullName>
    <label>Webinar Speaker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>