force-app/main/default/objects/Campaign/fields/WebinarStartTime__c.field-meta.xml
<CustomField>
    <fullName>WebinarStartTime__c</fullName>
    <label>Webinar Start Time</label>
    <type>DateTime</type>
</CustomField>