force-app/main/default/objects/Campaign/fields/WebinarURL__c.field-meta.xml
<CustomField>
    <fullName>WebinarURL__c</fullName>
    <label>Webinar URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>