force-app/main/default/objects/Campaign/fields/Year3__c.field-meta.xml
<CustomField>
    <fullName>Year3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Year3</label>
    <type>Checkbox</type>
</CustomField>