force-app/main/default/objects/Campaign/listViews/All_Active_Campaigns_NH_Zorg.listView-meta.xml
<ListView>
    <fullName>All_Active_Campaigns_NH_Zorg</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Segment__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CampaignMembers__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OperatingCompany__c</field>
        <operation>equals</operation>
        <value>Noordhoff Zorg</value>
    </filters>
    <label>All Active Campaigns NH Zorg</label>
    <sharedTo>
        <group>AllUsersNoordhoffZorg</group>
    </sharedTo>
</ListView>