force-app/main/default/objects/Campaign/listViews/All_Campaigns_Noordhoff_Professional.listView-meta.xml
<ListView>
    <fullName>All_Campaigns_Noordhoff_Professional</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OperatingCompany__c</field>
        <operation>equals</operation>
        <value>Noordhoff Professional</value>
    </filters>
    <label>All Campaigns Noordhoff Professional</label>
    <sharedTo>
        <group>AllUsersNoordhoffProfessional</group>
    </sharedTo>
</ListView>