force-app/main/default/objects/Campaign/listViews/AllActiveCampaignsNoordhoff.listView-meta.xml
<ListView>
    <fullName>AllActiveCampaignsNoordhoff</fullName>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OperatingCompany__c</field>
        <operation>equals</operation>
        <value>Noordhoff</value>
    </filters>
    <label>All Active Campaigns Noordhoff</label>
    <sharedTo>
        <group>AllUsersNoordhoff</group>
    </sharedTo>
</ListView>