force-app/main/default/objects/Campaign/listViews/AllCampaignsLiber.listView-meta.xml
<ListView>
    <fullName>AllCampaignsLiber</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Method__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OperatingCompany__c</field>
        <operation>equals</operation>
        <value>Liber</value>
    </filters>
    <label>All Campaigns Liber</label>
    <sharedTo>
        <group>AllUsersLiber</group>
    </sharedTo>
</ListView>