force-app/main/default/objects/Campaign/listViews/AllInformatCampaigns.listView-meta.xml
<ListView>
    <fullName>AllInformatCampaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Method__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OperatingCompany__c</field>
        <operation>equals</operation>
        <value>Plantyn</value>
    </filters>
    <filters>
        <field>Method__c</field>
        <operation>equals</operation>
        <value>Informat,Scoodle Track</value>
    </filters>
    <label>All Informat Campaigns</label>
    <sharedTo>
        <group>AllUsersPlantyn</group>
    </sharedTo>
</ListView>